# groove

./: .gitignore  Cargo.toml  Cross.toml  LICENSE.md  LICENSE.txt  NOTES.md  README.md  START.md  TODO.md  VISION.md  build.rs  checksums.txt  deny.toml  index.html  jingle_bells.mid  jingle_bells.mid.txt  precheck  sound_of_music.mid
.cargo/: config.toml
.github/workflows/: build.xxxyml  build.yml  ci.yml  release.yml
assets-nodist/os/: groove-iced.desktop
assets-nodist/work/: generate-patches.py  patches.csv  patches.json  patches.yaml.json
assets/os/: Groove.desktop  groove-egui.desktop
assets/samples/: 707-op-1.aif
assets/work/: generate-patches.py  patches.csv  patches.yaml
audio/: Cargo.toml
audio/src/: lib.rs
core/: Cargo.toml
core/src/: control.rs  generators.rs  instruments.rs  lib.rs  midi.rs  time.rs  traits.rs  util.rs  voices.rs
doc/Juno-106/: eric106.syx  factory patches.106
doc/designs/: time.md
docs/: Audio-EQ-Cookbook.txt  general-midi-numbers.csv  general-midi-percussion-numbers.csv
docs/Juno-106/: roland.Juno-106.sysex.txt
egui/: Cargo.toml
egui/src/: lib.rs
entities/: Cargo.toml
entities/src/: lib.rs  messages.rs
entities/src/controllers/: arpeggiator.rs  calculator.rs  control_trip.rs  integrated.rs  lfo.rs  mod.rs  patterns.rs  sequencers.rs
entities/src/effects/: bitcrusher.rs  chorus.rs  compressor.rs  delay.rs  filter.rs  gain.rs  limiter.rs  mixer.rs  mod.rs  reverb.rs
entities/src/instruments/: drumkit.rs  drumkit_EXPANDED.rs  fm.rs  metronome.rs  mod.rs  sampler.rs  synthesizer.rs  voice_stores.rs  welsh.rs
examples/: explorer.rs  minicli.rs  minidaw.rs  song.rs
groove-macros/: Cargo.toml
groove-macros/src/: lib.rs
iced/: Cargo.toml
iced/src/: lib.rs
iced/src/gui/: mod.rs  persistence.rs  views.rs
iced/src/subscriptions/: engine.rs  midi.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
midi/: Cargo.toml  major-scale-spaced-notes.mid  middle-a-for-six-seconds.mid  middle-a-for-six-seconds.mid.txt  multi-channel.mid.txt
midi/src/: lib.rs
midi_files/: clouds.mid.txt  d-gonnamakeyousweat.mid.txt  generate_dumps  major-scale-overlapping.mid.txt  major-scale-spaced-identical-notes.mid  major-scale-spaced-identical-notes.mid.txt  major-scale-spaced-notes.mid  major-scale-spaced-notes.mid.txt  major-scale.mid  major-scale.mid.txt  middle-c-for-six-seconds.mid  middle-c-for-six-seconds.mid.txt  multi-channel.mid  multi-channel.mid.txt  sound_of_music.mid.txt
midi_samples/: major-scale-overlapping.mid  major-scale-overlapping.mid.txt  major-scale-spaced-notes.mid  major-scale-spaced-notes.mid.txt  major-scale.mid  major-scale.mid.txt
orchestration/: Cargo.toml
orchestration/src/: entities.rs  entities_EXPANDED.rs  helpers.rs  lib.rs  messages.rs  metrics.rs  orchestrator.rs  util.rs
proc-macros/: Cargo.toml
proc-macros/src/: control.rs  entity.rs  everything.rs  lib.rs  nano.rs  nano_entities.rs  params.rs  prefs.rs  synchronization.rs  thing.rs  uid.rs  views.rs
projects/: automation-work.json  automation-work.yaml  bitcrusher_sawtooth_bits-to-crush-13.yaml  bitcrusher_triangle_bits-to-crush-13.yaml  calculator.json  calculator.yaml  default.json5  default.yaml  dev-loop.json5  dev-loop.yaml  drums-chorus.yaml  drums-filtered-24db.yaml  drums-filtered-q.yaml  drums-filtered.yaml  drums-reverb.yaml  drums.yaml  filter-band-pass-12db_noise_cutoff-1000_bandwidth-2000.yaml  filter-band-pass-12db_noise_cutoff-1000_bandwidth-30.yaml  filter-band-pass-12db_sine_cutoff-1000_bandwidth-2000.yaml  filter-band-stop-12db_noise_cutoff-1000_bandwidth-2000.yaml  filter-band-stop-12db_sine_cutoff-1000_bandwidth-30.yaml  filter-high-pass-12db_noise_cutoff-1000_q-20.yaml  filter-high-pass-12db_sine_cutoff-1000_q-20.yaml  filter-high-shelf-12db_noise_cutoff-1000_db-gain-30.yaml  filter-low-pass-12db_noise_cutoff-1000_q-0.707.yaml  filter-low-pass-12db_noise_cutoff-1000_q-20.yaml  filter-low-pass-12db_sine_cutoff-1000_q-20.yaml  filter-low-shelf-12db_noise_cutoff-1000_db-gain-30.yaml  filter-low-shelf-12db_noise_cutoff-1000_db-gain-6.yaml  filter-lpf-12db-noise-sweep-down.yaml  filter-peaking-eq-12db_noise_cutoff-1000_db-gain-6.yaml  filter-peaking-eq-12db_sine_cutoff-1000_db-gain-6.yaml  gain_sine_ceiling-0.100.yaml  integrated.yaml  kitchen-sink.yaml  limiter_noise_min-0.100_max-0.900.yaml  limiter_noise_min-0.400_max-0.600.yaml  limiter_sine_min-0.100_max-0.900.yaml  low-cpu.json  low-cpu.yaml  (+17 more)
projects/tests/: invalid-project.json  (+6 more)
res/: README.md
samples/: 808-op-1.aif
scripts/: calculate-checksums  delay.yaml  dev-entities.yaml  drum-track.yaml  envelope.yaml  everything.yaml  exercise-everything.yaml  noise-lpf-12db-sweep-down.yaml  oscillator-none.yaml  oscillator-pulse-width-90-percent-c3.yaml  pulse-width-25-pct.yaml  scale.yaml  sine.yaml  square.yaml  test.grv  test.yaml  welsh-piano.yaml
settings/: Cargo.toml
settings/src/: controllers.rs  effects.rs  generators.rs  instruments.rs  lib.rs  patches.rs  songs.rs
src/: Cross.toml  audio.rs  clock.rs  common.rs  control.rs  controllers.rs  engine.rs  entities.rs  envelopes.rs  general_midi.rs  gui.rs  gui_helpers.rs  helpers.rs  id_store.rs  instruments.rs  lib.rs  main.rs  messages.rs  metrics.rs  midi.rs  orchestrator.rs  oscillators.rs  patterns.rs  preset.rs  scripting.rs  sequencer.rs  settings.rs  test_trait_is_effect.rs  test_trait_is_midi_effect.rs  test_trait_makes_control_sink.rs  test_trait_sources_audio.rs  traits.rs  util.rs  utils.rs
test-data/: instruments-have-no-inputs.json5  instruments-have-no-inputs.yaml  kitchen-sink.json  kitchen-sink.json5  kitchen-sink.yaml  perf-1.json  perf-1.yaml
test_data/: kitchen-sink.yaml
tests/: automation.rs  aux_bus.rs  entity_validator.rs  integration.rs  sidechain.rs  song_editing.rs  song_programming.rs  write_songs_to_wav.rs
toys/: Cargo.toml
toys/src/: controllers.rs  effects.rs  instruments.rs  lib.rs
util/: calculate-checksums  csv-to-source  generate-controllers.py  generate-effect-projects.py  generate-kitchen-sink.py  write_midi
utils/: Cargo.toml
wix/: main.wxs
(+576 files in other folders)
