# Copyright (c) 2023 Mike Tsao. All rights reserved.
#
[package]
name = "groove"
version = "0.1.0"
authors = ["Mike Tsao <mike@sowbug.com>"]
edition = "2021"
readme = "README.md"
description = "A DAW (digital audio workstation) engine."
license = "Copyright (c) 2023 Mike Tsao. All rights reserved."
default-run = "groove-egui"

[dependencies]
anyhow = "1.0.12"
async-std = "1.0"
atomic-counter = "1.0.1"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = { version = "0.5", optional = true }
derive_more = "0.99.17"
dipstick = { version = "0.9.0", optional = true }
eframe = { version = "0.22.0", optional = true }
egui_extras = { version = "0.22.0", optional = true }
egui-toast = { version = "0.8.0", optional = true }
enum-primitive-derive = "0.2.2"
env_logger = "0.10"
futures = "0.3.28"
groove-audio = { path = "audio" }
groove-core = { path = "core", features = ["serialization"] }
groove-egui = { path = "egui", optional = true }
groove-entities = { path = "entities", features = ["serialization"] }
groove-macros = { path = "macros" }
groove-midi = { path = "midi", optional = true }
groove-orchestration = { path = "orchestration", features = ["serialization"] }
groove-proc-macros = { path = "proc-macros" }
groove-settings = { path = "settings" }
groove-toys = { path = "toys", features = ["serialization", "egui-framework"] }
groove-utils = { path = "utils" }
oorandom = "11.1.3"
plotters = { version = "0.3.4", optional = true, default-features = false }
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0.86"
serde_yaml = "0.8"
spectrum-analyzer = { version = "1.2.6", optional = true }
strum = "0.24.1"
strum_macros = "0.24.2"
typetag = "0.2.8"

[workspace]
members = [
    "audio",
    "core",
    "egui",
    "entities",
    "macros",
    "midi",
    "orchestration",
    "proc-macros",
    "settings",
    "toys",
    "utils",
]

[[bin]]
name = "groove-cli"

[[bin]]
name = "groove-egui"
required-features = ["egui-framework", "groove-midi"]

[lib]
name = "groove"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# https://doc.rust-lang.org/cargo/commands/cargo-build.html
#
# "Binaries are skipped if they have required-features that are missing"
#
# We want all the binaries to build on a plain `cargo build --workspace`. That's
# why default features includes both framework features.
[features]
default = ["serialization", "egui-framework", "groove-midi"]
egui-framework = [
    "crossbeam-channel",
    "eframe",
    "egui-toast",
    "egui_extras",
    "groove-core/egui-framework",
    "groove-egui",
    "groove-entities/egui-framework",
    "groove-orchestration/egui-framework"
]
serialization = [
    "serde",
    "groove-core/serialization",
    "groove-entities/serialization",
    "groove-orchestration/serialization"
]
visualization = ["dep:plotters", "dep:spectrum-analyzer"]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH"
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/aarch64:latest"
xargo = false

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH"
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/armv7:latest"
xargo = false

[package.metadata.deb]
assets = [
    # "You can use target/release/ in asset paths, even if Cargo is configured
    # to cross-compile or use custom CARGO_TARGET_DIR. The target dir paths will
    # be automatically corrected." https://github.com/kornelski/cargo-deb
    ["LICENSE.md", "usr/share/doc/groove/LICENSE.md", "644"],
    ["README.md", "usr/share/doc/groove/README.md", "644"],
    ["assets-nodist/os/groove-egui.desktop", "usr/share/applications/", "644"],
    ["assets/patches/**/*.yaml", "usr/share/groove/patches/", "644"],
    ["assets/samples/**/*.wav", "usr/share/groove/samples/", "644"],
    ["projects/**/*.yaml", "usr/share/groove/projects/", "644"],
    ["target/release/groove-cli", "usr/bin/", "755"],
    ["target/release/groove-egui", "usr/bin/", "755"],
]
