# Copyright (c) 2023 Mike Tsao. All rights reserved.
#
[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
default-run = "groove-egui"
description = "A DAW (digital audio workstation) engine."
edition = "2021"
license = "Copyright (c) 2023 Mike Tsao. All rights reserved."
name = "groove"
publish = false
readme = "README.md"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-std = "1.0"
atomic-counter = "1.0.1"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = { version = "0.5", optional = true }
derive_more = "0.99"
dipstick = { version = "0.9", optional = true }
eframe = { version = "0.22", optional = true }
egui-toast = { version = "0.8", optional = true }
egui_extras = { version = "0.22", optional = true }
enum-primitive-derive = "0.2"
env_logger = "0.10"
futures = "0.3"
groove-audio = { path = "audio" }
groove-core = { path = "core", features = ["serialization"] }
groove-egui = { path = "egui", optional = true }
groove-entities = { path = "entities", features = ["serialization"] }
groove-macros = { path = "macros" }
groove-midi = { path = "midi", optional = true }
groove-orchestration = { path = "orchestration", features = ["serialization"] }
groove-proc-macros = { path = "proc-macros" }
groove-settings = { path = "settings" }
groove-toys = { path = "toys", features = ["serialization", "egui-framework"] }
groove-utils = { path = "utils" }
hound = "3.5"
oorandom = "11.1"
plotters = { version = "0.3", optional = true, default-features = false }
rayon = "1.7"
regex = "1.7"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
spectrum-analyzer = { version = "1.2", optional = true }
strum = "0.25"
strum_macros = "0.25"
typetag = "0.2"

[workspace]
members = [
    "audio",
    "core",
    "egui",
    "entities",
    "macros",
    "midi",
    "orchestration",
    "proc-macros",
    "settings",
    "toys",
    "utils",
]

[[bin]]
name = "groove-cli"

[[bin]]
name = "groove-egui"
required-features = ["egui-framework", "groove-midi"]

[lib]
name = "groove"
path = "src/lib.rs"

[[example]]
name = "minidaw"
required-features = ["egui-framework", "serialization"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# https://doc.rust-lang.org/cargo/commands/cargo-build.html
#
# "Binaries are skipped if they have required-features that are missing"
#
# We want all the binaries to build on a plain `cargo build --workspace`. That's
# why default features includes both framework features.
[features]
default = ["serialization", "egui-framework", "groove-midi"]
egui-framework = [
    "crossbeam-channel",
    "eframe",
    "egui-toast",
    "egui_extras",
    "groove-core/egui-framework",
    "groove-egui",
    "groove-entities/egui-framework",
    "groove-orchestration/egui-framework"
]
serialization = [
    "serde",
    "groove-core/serialization",
    "groove-entities/serialization",
    "groove-orchestration/serialization"
]
visualization = ["dep:plotters", "dep:spectrum-analyzer"]

[build-dependencies]
clap_mangen = "0.2.12"
clap = { version = "4.0", features = ["derive"] }

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH"
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/aarch64:latest"
xargo = false

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH"
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/armv7:latest"
xargo = false

[package.metadata.deb]
assets = [
    # "You can use target/release/ in asset paths, even if Cargo is configured
    # to cross-compile or use custom CARGO_TARGET_DIR. The target dir paths will
    # be automatically corrected." https://github.com/kornelski/cargo-deb
    ["LICENSE.md", "usr/share/doc/groove/", "644"],
    ["README.md", "usr/share/doc/groove/", "644"],
    ["assets-nodist/os/groove-egui.desktop", "usr/share/applications/", "644"],
    ["assets/patches/**/*.json", "usr/share/groove/patches/", "644"],
    ["assets/samples/**/*.wav", "usr/share/groove/samples/", "644"],
    ["projects/**/*.json", "usr/share/groove/projects/", "644"],
    ["target/release/groove-cli", "usr/bin/", "755"],
    ["target/release/groove-egui", "usr/bin/", "755"],
    ["target/groove.1", "usr/local/man/man1/", "644"],
]
