# Copyright (c) 2023 Mike Tsao. All rights reserved.
#
[package]
name = "groove-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.12"
bit-vec = "0.6"
eframe = { version = "0.22.0", optional = true }
enum-primitive-derive = "0.2.2"
float-cmp = "0.9.0"
groove-proc-macros = { path = "../proc-macros" }
hound = "3.5" # TODO: remove when we figure out how to isolate tests that load files
kahan = "0.1.4"
midly = "0.5.3"
more-asserts = "0.3.1"
nalgebra = "0.32.1"
num-traits = "0.2"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = "0.24.1"
strum_macros = "0.24.2"

[features]
"serialization" = ["serde"] #, "serde_yaml"]
"egui-framework" = ["eframe"]
