# Copyright (c) 2023 Mike Tsao. All rights reserved.
#
[package]
name = "groove-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
app_dirs2 = "2.5"
bit-vec = "0.6"
derive_more = "0.99"
eframe = { version = "0.22" }
ensnare-core = { path = "../../ensnare/core" }
enum-primitive-derive = "0.2"
float-cmp = "0.9"
ensnare-proc-macros = { path = "../../ensnare/proc-macros" }
hound = "3.5"                                                # TODO: remove when we figure out how to isolate tests that load files
kahan = "0.1"
midly = "0.5"
more-asserts = "0.3"
nalgebra = "0.32"
num-traits = "0.2"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
typetag = "0.2"
