[package]
name = "groove-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
# dipstick = { version = "0.9.0", optional = true }
# groove-macros = { path = "../macros" }
# groove-proc-macros = { path = "../proc-macros" }
# groove-toys = { path = "../toys" }
# hound = "3.5"
# more-asserts = "0.3.1"
# rand = "0.8.5"
# rustc-hash = "1.1.0"
# strum = "0.24.1"
# strum_macros = "0.24.2"
anyhow = "1.0.12"
cpal = "0.15.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.15"
eframe = "0.21.3"
groove-core = { path = "../core", features = ["egui-framework"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
"serialization" = ["serde"]
