[package]
name = "groove-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.12"
cpal = "0.15.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.15"
eframe = "0.22.0"
groove-core = { path = "../core", features = ["egui-framework"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
"serialization" = ["serde"]
