[package]
name = "groove-entities"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.12"
btreemultimap = "0.1.0"
convert_case = "0.6.0"
eframe = { version = "0.21.3", optional = true }
egui_extras = { version = "0.21.0", optional = true }
egui_extras_xt = { git = "https://github.com/xTibor/egui_extras_xt", features = [
    "knobs",
    "displays"
], optional = true }
egui_grid = { version = "0.1.0", optional = true }
float-cmp = "0.9.0"
groove-core = { path = "../core", features = ["serialization"] }
groove-egui = { path = "../egui", optional = true }
groove-proc-macros = { path = "../proc-macros" }
groove-toys = { path = "../toys" }
groove-utils = { path = "../utils" }
hound = "3.5"
midly = "0.5.3"
more-asserts = "0.3.1"
rand = "0.8.5"
riff-io = { git = "https://github.com/sowbug/riff-io.git" }
rustc-hash = "1.1.0"
strum = "0.24.1"
strum_macros = "0.24.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
# https://stackoverflow.com/a/62972981/344467
"serialization" = [
    "serde",
    "groove-core/serialization",
    "groove-egui/serialization"
]
"egui-framework" = [
    "eframe",
    "egui_extras",
    "egui_extras_xt",
    "egui_grid",
    "groove-core/egui-framework",
    "groove-egui"
]
