[package]
name = "groove-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
# dipstick = { version = "0.9.0", optional = true }
# groove-macros = { path = "../macros" }
# hound = "3.5"
# more-asserts = "0.3.1"
# rand = "0.8.5"
anyhow = "1.0.12"
async-std = "1.0"
cpal = "0.15.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.15"
groove-core = { path = "../core" }
groove-entities = { path = "../entities" }
groove-orchestration = { path = "../orchestration" }
groove-proc-macros = { path = "../proc-macros" }
groove-settings = { path = "../settings" }
groove-toys = { path = "../toys" }
groove-utils = { path = "../utils" }
iced = { version = "0.8.0", features = ["smol", "canvas", "svg"] }
iced_audio = "0.11.0"
iced_aw = { version = "0.4.1", features = ["card", "badge"] }
iced_native = "0.9.1"
midir = "0.8.0"
midly = "0.5.3"
native-dialog = "0.6.3"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0.86"
serde_yaml = "0.8"
strum = "0.24.1"
strum_macros = "0.24.2"

[features]
default = ["serialization"]
# https://stackoverflow.com/a/62972981/344467
"serialization" = [
    "serde",
    "groove-core/serialization",
    "groove-entities/serialization",
    "groove-settings/serialization",
    "groove-toys/serialization",
]
