[package]
name = "groove-midi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
ensnare = { path = "../../ensnare" }
ensnare-midi-interface = { path = "../../ensnare/midi-interface" }
midir = "0.9"
midly = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
