[package]
name = "groove-orchestration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.12"
cpal = "0.15.0"
crossbeam = "0.8"
dipstick = { version = "0.9.0", optional = true }
eframe = { version = "0.22.0", optional = true }
egui_extras = { version = "0.22.0", optional = true }
groove-core = { path = "../core" }
groove-entities = { path = "../entities" }
groove-macros = { path = "../macros" }
groove-proc-macros = { path = "../proc-macros" }
groove-toys = { path = "../toys" }
hound = "3.5"
more-asserts = "0.3.1"
num-derive = "0.3.3"
num-traits = "0.2"
oorandom = "11.1.3"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = "0.24.1"
strum_macros = "0.24.2"

[features]
egui-framework = ["eframe", "egui_extras", "groove-core/egui-framework"]
metrics = ["dep:dipstick"]
serialization = ["serde"]
