[package]
name = "groove-settings"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
convert_case = "0.6"
float-cmp = "0.9"
groove-core = { path = "../core", features = ["serialization"] }
groove-entities = { path = "../entities", features = ["serialization"] }
groove-macros = { path = "../macros" }
groove-orchestration = { path = "../orchestration" }
groove-toys = { path = "../toys", features = ["serialization"] }
groove-utils = { path = "../utils" }
hound = "3.5"
json5 = "0.4"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"

[features]
default = ["serialization"]
# https://stackoverflow.com/a/62972981/344467
"serialization" = [
    "serde",
    "groove-core/serialization",
    "groove-entities/serialization"
]
