# Copyright (c) 2023 Mike Tsao. All rights reserved.
#
[package]
name = "groove-toys"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", optional = true }
groove-core = { path = "../core", features = ["serialization"] }
groove-proc-macros = { path = "../proc-macros" }
oorandom = "11.1.3"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = "0.24.1"
strum_macros = "0.24.2"

[features]
egui-framework = ["eframe", "groove-core/egui-framework"]
serialization = ["serde", "groove-core/serialization"]
