# Copyright (c) 2023 Mike Tsao. All rights reserved.
#
[package]
name = "groove-toys"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eframe = { version = "0.22" }
ensnare-core = { path = "../../ensnare/core" }
ensnare-proc-macros = { path = "../../ensnare/proc-macros" }
groove-proc-macros = { path = "../proc-macros" }
oorandom = "11.1"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
typetag = "0.2"
